--- a/module-5/Tageant_EX4.css
+++ b/module-5/Tageant_EX4.css
@@ -55,3 +55,9 @@ body {
     padding: 5px;
 }
 
+a.link {
+    color: #2da1c1;
+    font-size: small;
+    text-decoration: dotted;
+    float: right;
+}
